update: React 全家桶

--- a/source/_posts/2022_07_React-全家桶.md
+++ b/source/_posts/2022_07_React-全家桶.md
@@ -209,7 +209,7 @@ import { Component } from './Component'
 export { Component }
 ```
 
-src/component
+src/Component
 
 ```js
 export class Component {
@@ -244,7 +244,7 @@ function mountClassComponent(vdom) {
 
 ## 类组件的更新
 
-src/component
+src/Component
 
 ```js
 class Updater {
@@ -358,7 +358,7 @@ export function compareTwoVdom(parentNode, oldVdom, newVdom) {
 }
 ```
 
-src/component
+src/Component
 
 ```js
 import { findDOM } from './react-dom'
@@ -389,5 +389,400 @@ export class Component {
 ## 合成事件和批量更新
 
 只要是 react 能管理的方法，都是批量的，比如合成事件和生命周期回调中，状态修改和视图更新
+
+src/Component
+
+```js
+// 更新对列
+export let updateQueue = {
+    isBatchingUpdate: false, // 是否批量更新，true就是批量，false就是非批量，同步的
+    updaters: new Set(),
+    batchUpdate: () => {
+        updateQueue.isBatchingUpdate = false
+        for (let updater of updateQueue) {
+            updater.updateComponent()
+        }
+        updateQueue.updaters.clear()
+    }
+}
+
+export class Component {
+    // ...
+    emitUpdate() {
+        if (updateQueue.isBatchingUpdate) {
+            return updateQueue.updaters.add(this)
+        }
+        this.updateComponent()
+    } 
+    // ...
+}
+```
+
+src/react-dom
+
+```js
+// ...
+import { addEvent } from './event'
+
+function updateProps(dom, oldProps = {}, newProps = {}) {
+    for (let key in newProps) {
+        // ...
+        if (xxx) {
+
+        } else if (/^on[A-Z].*/.test(key)) {
+            addEvent(dom, key.toLowerCase(), newProps[key])
+        }
+        // ...
+    }
+}
+```
+
+src/event
+
+```js
+import { updateQueue } from './Component'
+
+/**
+ * 给dom节点绑定事件
+ * @param dom 真实的dom 如button
+ * @param eventType 事件名 onclick
+ * @param handler 原始的事件处理函数
+ */
+export function addEvent(dom, evnetType, handler) {
+    const store = dom.store || (dom.store || {})
+    store[eventType] = handler
+
+    if (!document[eventType]) {
+        // react 17 绑的是 document，18 绑的是 react root 节点
+        document[eventType] = dispatchEvent
+    }
+}
+
+function dispatchEvent(event) {
+    updateQueue.isBatchingUpdate = true
+
+    const { target, type } = event // target 真实dom，type 是 'click'
+    const eventType = `on${type}`
+    const { store } = target
+    const handler = store && store[eventType]
+    handler && handler()
+
+
+    updateQueue.batchUpdate()
+}
+```
+
+**合成事件**：屏蔽浏览器差异，实现批量更新
+
+src/event
+
+```js
+function dispatchEvent(event) {
+    updateQueue.isBatchingUpdate = true
+
+    const { target, type } = event // target 真实dom，type 是 'click'
+    const eventType = `on${type}`
+    // 创建合成事件
+    const syntheicEvent = createSyntheicEvent(event)
+
+    // 这里事件绑定被react代理到document，所以模拟事件冒泡
+    let currentTarget = target
+    while (currentTarget) {
+        // currentTarget 在冒泡的每个阶段，currentTarget 不一样，但是 target 都是一样的，点谁就是谁
+        syntheicEvent.currentTarget = currentTarget
+        const { store } = currentTarget
+        const handler = store && store[eventType]
+        // 然后把合成事件对象传给事件处理函数
+        handler && handler(syntheicEvent)
+        // 如果阻止冒泡，则跳出循环
+        if (syntheicEvent.isPropagationStopped) {
+            break
+        }
+        currentTarget = currentTarget.parentNode
+    }
+
+
+    updateQueue.batchUpdate()
+}
+
+
+function createSyntheicEvent(nativeEvent) {
+    const syntheicEvent = nativeEvent
+
+    for (let key in nativeEvent) {
+        const value = nativeEvent[key]
+        if (typeof value === 'function') {
+            value = value.bind(nativeEvent)
+        }
+        syntheicEvent[key] = syntheicEvent
+    }
+    syntheicEvent.nativeEvent = nativeEvent
+
+    syntheicEvent.isDefaultPrevented = false // 是否已经阻止了默认事件
+    syntheicEvent.preventDefault = preventDefault
+    syntheicEvent.isPropagationStopped = false // 是否已经阻止冒泡
+    syntheicEvent.stopPropagation = stopPropegation
+
+    return syntheicEvent
+}
+
+
+function preventDefault() {
+    this.isDefaultPrevented = true
+    const event = this.nativeEvent
+    if (event.preventDefault) {
+        event.preventDefault()
+    } else {
+        event.returnValue = false
+    }
+}
+
+// 阻止冒泡
+function stopPropagation() {
+    this.isPropagationStopped = true
+    const event = this.nativeEvent
+    if (event.stopPropagation) {
+        event.stopPropagation()
+    } else {
+        event.cancelBubble = false
+    }
+}
+```
+
+## ref
+
+访问 dom 节点，或组件
+
+src/element
+
+```js
+export const REACT_FORWARD_REF = Symbol('react.forward_ref')
+```
+
+src/react
+
+```js
+import { REACT_FORWARD_REF } from './element'
+function createRef() {
+    return { current: null }
+}
+
+// 函数组件传递 ref
+// 返回一个对象，$$typeof 是 symbol(react.forward_ref)，对象有个 render，是函数组件
+function forwardRef(render) {
+    return {
+        $$typeof: REACT_FORWARD_REF,
+        render
+    }
+}
+
+const React = {
+    // ...
+    createRef
+}
+
+export default React
+```
+
+src/react-dom
+
+```js
+import { REACT_FORWARD_REF } from './element'
+
+function createDOM(vdom) {
+    const { type, /* ..., */ ref } = vdom
+    if (type && type.$$typeof === REACT_FORWARD_REF) {
+        return mountForwardCompoent(vdom)
+    } else if (xxx) {
+        // ...
+    }
+    // ...
+    vdom.dom = dom
+    if (ref) {
+        ref.current = dom
+    }
+}
+
+function mountClassComponent(vdom) {
+    const { /* ..., */ ref } = vdom
+    if (ref) {
+        ref.current = classInstance
+    }
+}
+
+function mountForwardCompoent(vdom) {
+    const { type, props, ref } = vdom
+    const renderVdom = type.render(props, ref)
+    vdom.oldRenderVdom = renderVdom
+    return createDOM(renderVdom)
+}
+```
+
+## 组件的生命周期
+
+1. **setup props and state**
+2. **mounting**
+2.1 componentWillMount
+2.2 render
+2.3 componentDidMount
+3. **updation**
+3.1 props
+3.1.1 componentWillRecieveProps
+3.1.2 shouldComponentUpdate
+3.1.2.1 true -> componentWillUpdate
+3.1.2.2 false -> x
+3.1.3 render
+3.1.4 componentDidUpdate
+3.2 state
+3.2.1 shouldComponentUpdate
+3.2.1.1 true -> componentWillUpdate
+3.2.1.2 false -> x
+3.2.2 render
+3.2.3 componentDidUpdate
+4. **unmounting**
+4.1 componentWillUnmount
+
+src/react-dom
+
+```js
+function mountClassComponent(vdom) {
+    const { type, props, ref } = vdom
+    const classInstance = new type(props)
+    vdom.classInstance = classInstance
+    if (ref) ref.current = classInstance
+    // render 前 willmount
+    if (classInstance.componentWillMount) {
+        classInstance.componentWillMount()
+    }
+    const renderVdom = classInstance.render()
+    classInstance.oldRenderVdom = renderVdom
+    const dom = createDOM(renderVdom)
+    // render 后组件挂载 did mount
+    if (classInstance.componentDidMount) {
+        classInstance.componentDidMount()
+    }
+    return dom
+}
+```
+
+```js
+function shouldUpdate(classInstance, nextState) {
+    let willUpdate = true
+    if (classInstance.shouldComponentUpdate && !(classInstance.shouldComponentUpdate())) {
+        willUpdate = false
+    }
+    if (willUpdate && classInstance.willComponentUpdate) {
+        classInstance.willComponentUpdate()
+    }
+    classInstance.state = nextState
+    if (willUpdate) {
+        classInstance.forceUpdate()
+    }
+}
+
+class Component {
+    //...
+    forceUpdate() {
+        const oldRenderVdom = this.oldRenderVdom
+        const oldDOM = findDOM(oldRenderVdom)
+        const newRenderVdom = this.render()
+        compareTwoVdom(oldDOM.parentNode, oldRenderVdom, newRenderVdom)
+        this.oldRenderVdom = newRenderVdom
+        if (this.componentDidUpdate) {
+            this.componentDidUpdate(this.props, this.state)
+        }
+    }
+}
+```
+
+为什么 will 的生命周期不安全了？
+因为 fiber，在 17 及以前，组件渲染是同步的
+18 可以暂停
+
+### DOM Diff
+
+src/react-dom
+
+```js
+export function compareTwoVdom(parentNode, oldVdom, newVdom) {
+    // 新旧都没有
+    if (!oldVdom && !newVdom) {
+        return null
+    } else if (oldVdom && !newVdom) {
+        // 旧的有，新的没有，删除
+        unmountVdom(oldVdom)
+    } else if (!oldVdom && newVdom) {
+        const newDOM = createDOM(newVdom)
+        // 此处有问题
+        parentNode.appendChild(newDOM)
+    } else if (oldVdom && newVdom && oldVdom.type !== newVdom.type) {
+        unmountVdom(oldVdom)
+        const newDOM = createDOM(newVdom)
+        // 此处有问题
+        parentNode.appendChild(newDOM)
+    } else {
+        // 新旧节点都存在，且类型一样，进行深度的dom diff 过程
+        updateElement(oldVdom, newVdom)
+    }
+}
+
+// 把组件对应的真实dom移除掉
+function unmountVdom(vdom) {
+    const { type, props, ref } = vdom
+    const currentDOM = findDOM(vdom)
+    if (vdom.classInstance && vdom.classInstance.componentWillUnmount) {
+        vdom.classInstance.componentWillUnmount()
+    }
+    if (ref) {
+        ref.current = null
+    }
+    // 对儿子递归删除
+    if (props.children) {
+        const children = Array.isArray(props.children) ? props.children : [props.children]
+        children.forEach(unmountVdom)
+    }
+    if (currentDOM) {
+        currentDOM.remove()
+    }
+}
+
+function updateElement(oldVdom, newVdom) {
+    if (oldVdom.type === REACT_TEXT) {
+        // 新老节点都是文本节点
+        const currentDOM = newVdom.dom = findDOM(oldVdom)
+
+        if (oldVdom.props !== newVdom.props) {
+            // 文本不一样
+            currentDOM.textContent = newVdom.props
+        }
+    } else if (oldVdom.type === 'string') {
+        // 原生节点
+        const currentDOM = newVdom.dom = findDOM(oldVdom)
+        updateProps(currentDOM, oldVdom.props, newVdom.props)
+        updateChildren(currentDOM, oldVdom.props.children, newVdom.props.children)
+    } else if (typeof oldVdom.type === 'function') {
+        // 类组件和函数组件
+        if (oldVdom.type.isReactCompoent) {
+            // 类组件
+            updateClassComponent(oldVdom, newVdom)
+        } else {
+            updateFunctionComponent(oldVdom, newVdom)
+        }
+    }
+}
+
+
+function updateChildren(parentDOM, oldVChildren, newVChildren) {
+
+}
+
+function updateClassComponent(oldVdom, newVdom) {
+
+}
+
+function updateFunctionComponent(oldVdom, newVdom) {
+
+}
+```
 
 ## fiber
