update: React 全家桶

--- a/source/_posts/2022_07_React-全家桶.md
+++ b/source/_posts/2022_07_React-全家桶.md
@@ -668,9 +668,9 @@ function mountClassComponent(vdom) {
 ```
 
 ```js
-function shouldUpdate(classInstance, nextState) {
+function shouldUpdate(classInstance, nextProps, nextState) {
     let willUpdate = true
-    if (classInstance.shouldComponentUpdate && !(classInstance.shouldComponentUpdate())) {
+    if (classInstance.shouldComponentUpdate && !(classInstance.shouldComponentUpdate(nextProps, nextState))) {
         willUpdate = false
     }
     if (willUpdate && classInstance.willComponentUpdate) {
@@ -706,7 +706,7 @@ class Component {
 src/react-dom
 
 ```js
-export function compareTwoVdom(parentNode, oldVdom, newVdom) {
+export function compareTwoVdom(parentNode, oldVdom, newVdom, nextDOM) {
     // 新旧都没有
     if (!oldVdom && !newVdom) {
         return null
@@ -716,7 +716,11 @@ export function compareTwoVdom(parentNode, oldVdom, newVdom) {
     } else if (!oldVdom && newVdom) {
         const newDOM = createDOM(newVdom)
         // 此处有问题
-        parentNode.appendChild(newDOM)
+        if (nextDOM) {
+            parentNode.insertBefore(nextDOM, newDOM)
+        } else {
+            parentNode.appendChild(newDOM)
+        }
     } else if (oldVdom && newVdom && oldVdom.type !== newVdom.type) {
         unmountVdom(oldVdom)
         const newDOM = createDOM(newVdom)
@@ -775,16 +779,653 @@ function updateElement(oldVdom, newVdom) {
 
 
 function updateChildren(parentDOM, oldVChildren, newVChildren) {
+    oldVChildren = Array.isArray(oldVChildren) ? oldVChildren : [oldVChildren]
+    newVChildren = Array.isArray(newVChildren) ? newVChildren : [newVChildrens]
+    const max = Math.max(oldVChildren.length, newVChildren.length)
 
+    for (let i = 0; i < max; i ++) {
+        // 找到它的后一个 dom，然后把自己放到它前面
+        const nextVdom = oldVChildren.find((item, index) => index > i && item && findDOM(item))
+        compareTwoVdom(parentDOM, oldVChildren[i], newVChildren[i], nextVdom && nextVdom.dom)
+    }
 }
 
 function updateClassComponent(oldVdom, newVdom) {
-
+    const classInstance = newVdom.classInstance = oldVdom.classInstance
+    if (classInstance.componentWillReceiveProps) {
+        classInstance.componentWillReceiveProps(newVdom.props)
+    }
+    classInstance.updater.emitUpdate(newVdom.props)
 }
 
 function updateFunctionComponent(oldVdom, newVdom) {
-
+    const currentDOM = findDOM(oldVdom)
+    if (!currentDOM) return
+    const parentDOM = currentDOM.parentNode
+    const { type, props } = newVdom
+    const newRenderVdom = type(props)
+    compareTwoVdom(parentDOM, oldVdom.oldRenderVdom, newRenderVdom)
+    newVdom.oldRenderVdom = newRenderVdom
 }
 ```
+
+src/Component
+
+```js
+class Updater {
+    emitUpdate(nextProps) {
+        this.nextProps = nextProps
+        if (updateQueue.isBatchingUpdate) {
+            updateQueue.updaters.add(this)
+        } else {
+            this.updateComponent()
+        }
+    }
+
+    updateComponent() {
+        const { nextProps, pendingState } = this
+        if (nextProps || pendingState.length > 0) {
+            shouldUpdate(classInstance, nextProps, this.getState())
+        }
+    }
+}
+
+function shouldUpdate(classInstance, nextProps, nextState) {
+    let willUpdate = true
+    if (classInstance.shouldComponentUpdate && !(classInstance.shouldComponentUpdate())) {
+        willUpdate = false
+    }
+    if (willUpdate && classInstance.componentWillUpdate) {
+        classInstance.componentWillUpdate()
+    }
+    if (nextProps) {
+        classInstance.props = nextProps
+    }
+    classInstance.state = nextState
+    if (willUpdate) {
+        classInstance.forceUpdate()
+    }
+}
+```
+
+## DOM DIFF 优化
+
++ 只会对同级进行对比，跨层级移动不会复用
++ 不同类型的元素会产生不同的结构，销毁老结构，创建新结构
++ 可以通过key标识元素的移动
+
+![](dom-diff.png)
+
++ 将老的节点缓存在映射表中
++ 遍历新的节点，与老的节点进行对比
++ 如果匹配的到同样的老节点，就将 lastPlacedIndex 与 oldIndex 进行对比，然后将 lastPlacedIndex 置为大的那个
++ 如果 oldIndex 大于等于 lastPlacedIndex，则只做更新操作
++ 如果 oldIndex 小于 lastPlacedIndex，则做移动并更新操作
++ 映射表中没有对应的新节点，则删除该节点
+
+> old 1 2 3 4 5
+> new 5 1 2 3 4
+> 缺点：这种情况，5对比完了以后lastPlacedIndex变成了4，比旧节点中1234的索引都大，最后会移动1234，性能较差
+
+src/react-dom
+
+```js
+function updateChildren(parentDOM, oldVChildren, newVChildren) {
+    oldVChildren = (Array.isArray(oldVChildren) ? oldVChildren : [oldVChildren]).filter(Boolean)
+    newVChildren = (Array.isArray(newVChildren) ? newVChildren : [newVChildrens]).filter(Boolean)
+    let lastPlacedIndex = -1 // 上一个不需要移动的老节点的挂载索引
+    let keyedOldMap = {}
+    oldVChildren.forEach((oldVChild, i) => {
+        const oldKey = oldVChild && oldVChild.key ? oldVChild.key : index
+        keyedOldMap[oldKey] = oldChild
+    })
+    const patch = []
+    newVChildren.forEach((newVChild, i) => {
+        newVChild && (newVChild.mountIndex = index) // 置为新的索引，下次更新 diff 用这个 index 了
+        const newKey = newVChild.key ? newVChild.key : i
+        const oldVChild = keyedOldMap[newKey]
+        if (oldVChild) { // 找到了此 key 对应的老节点
+            updateElement(oldVChild, newVChild)
+            if (oldVChild.mountIndex < lastPlacedIndex) { // 要移动
+                patch.push({
+                    type: 'MOVE',
+                    oldVChild,
+                    newVChild,
+                    mountIndex: i // 新的挂载索引
+                })
+            }
+            delete keyedOldMap[newKey]
+            lastPlacedIndex = Math.max(lastPlacedIndex, oldVChild.mountIndex)
+        } else {
+            // 没有找到对应的旧节点，就插入操作
+            patch.push({
+                type: 'PLACEMENT', // 插入
+                newVChild,
+                mountIndex: i
+            })
+        }
+    })
+    const moveVChild = patch.filter(action => action.type === 'MOVE').map(action => action.oldVChild)
+    // 没有复用到的老节点
+    // ABCDEF
+    Object.value(oldKeyedMap).concat(moveVChild).forEach(oldVChild => {
+        const currentDOM = findDOM(oldVChild)
+        currentDOM.remove()
+    })
+    // ABCE
+    patch.forEach(action => {
+        const { type, oldVChild, newVChild, mountIndex } = action
+        const childNodes = parentDOM.childNodes // [ABCE]
+        if (type === 'PLACEMENT') { // 插入节点
+            const newDOM = createDOM(newVChild)
+            const childNode = childNodes[mountIndex] // 找一下这个索引位置是否已经有真实dom了
+            if (childNode) {
+                parentDOM.insertBefore(newDOM, childNode)
+            } else{
+                parentDOM.appendChild(newDOM)
+            }
+        } else if (type === 'MOVE') {
+            // 移动，之前已经删掉了，但是 dom 对象还在，直接复用
+            const oldDOM = findDOM(oldVChild)
+            const childNode = childNodes[mountIndex] // 找一下这个索引位置是否已经有真实dom了
+            if (childNode) {
+                parentDOM.insertBefore(oldDOM, childNode)
+            } else{
+                parentDOM.appendChild(oldDOM)
+            }
+        }
+    })
+}
+
+function reconcileChildren(children, parentDOM) {
+    for (let i = 0; i < children.length; i ++) {
+        children[i].mountIndex = i; // 将挂载索引加到孩子上
+        mount(children[i], parentDOM)
+    }
+}
+
+function createDOM() {
+    // ...
+    if (props) {
+        // ...
+        if (typeof props.children === 'object' && props.children.type) {
+            props.children.mountIndex = 0
+            mount(props.children, dom)
+        }
+    } 
+    // ...
+}
+```
+
+## Fragment
+
+src/element
+
+```js
+export const REACT_FRAGMENT = Symbol('react.fragment')
+```
+
+src/react
+
+```js
+import { REACT_FRAGMENT } from './element'
+const React = {
+    Fragment: REACT_FRAGMENT
+}
+
+export default React
+```
+
+src/react-dom
+
+```js
+import { REACT_FRAGMENT } from './element'
+
+function createDOM(vdom) {
+    const { type, props, ref } = vdom
+    let dom
+    if (type === REACT_FRAGMENT) {
+        dom = document.createDocumentFragment()
+    }
+    // if -> else if...
+}
+
+
+function updateElement(oldVdom, newVdom) {
+    if (oldVdom.type === REACT_FRAGMENT) {
+        const currentDOM = newVdom.dom = findDOM(oldVdom)
+        updateChildren(currentDOM, oldVdom.props.children, newVdom.props.children)
+    }
+    // if -> else if...
+}
+```
+
+## 新的生命周期
+
+static getDerivedStateFromProps 将传入的属性映射到状态上
+
+getSnapshotBeforeUpdate 在组件将要更新前触发，返回一个值，然后传给 componentDidUpdate 的第三个参数，比如在更新前获取 dom 的各种属性的值，然后更新后进行对比
+
+旧的 will 生命周期除了 componentWillUnmount 都被删掉了
+
+其他几个都可能执行多次，因为 react 可能 暂停、中止、重启组件的挂载和更新
+
+src/Component
+
+```js
+class Component {
+    forceUpdate() {
+        const oldRenderVdom = this.oldRenderVdom
+        const oldDOM = findDOM(oldRenderVdom)
+        if (this.constructor.getDerivedStateFromProps) {
+            const newState = this.constructor.getDerivedStateFromProps(this.props, this.state)
+            if (newState) {
+                this.state = {
+                    ...this.state,
+                    ...newState
+                }
+            }
+        }
+        // 渲染新的虚拟dom
+        const newRenderVdom = this.render()
+        // 快照
+        const snapShot = this.getSnapshotBeforeUpdate && this.getSnapshotBeforeUpdate()
+        compareTwoVdom(oldDOM.parentNode, oldRenderVdom, newRenderVdom)
+        this.oldRenderVdom = newRenderVdom
+        if (this.componentDidUpdate) {
+            this.componentDidUpdate(this.props, this.state, snapShot)
+        }
+    }
+}
+```
+
+## context
+
+src/element
+
+```js
+export const REACT_CONTEXT = Symbol('react.context')
+
+export const REACT_PROVIDER = Symbol('react.provider')
+```
+
+src/react
+
+```js
+import { REACT_CONTEXT, REACT_PROVIDER } from './element'
+
+function createContext() {
+    const context = {
+        $$typeof: REACT_CONTEXT,
+        _currentValue: undefined
+    }
+    context.Provider = {
+        $$typeof: REACT_PROVIDER,
+        _context: context
+    }
+    context.Consumer = {
+        $$typeof: REACT_CONTEXT,
+        _context: context
+    }
+    return context
+}
+const React = {
+    createContext
+}
+
+export default React
+```
+
+src/react-dom
+
+```js
+import { REACT_CONTEXT, REACT_PROVIDER } from './element'
+
+function createDOM(vdom) {
+    const { type, props, ref } = vdom
+    let dom
+    if (type && type.$$typeof === REACT_PROVIDER) {
+        return mountProviderComponent(vdom)
+    } else if (type && type.$$typeof === REACT_CONTEXT) (
+        return mountContextComponent()
+    )
+    // else if ...
+}
+
+// 渲染 provider 就是渲染它儿子，并给 value 赋值（把 value 传给 currentValue）
+function mountProviderComponent(vdom) {
+    const { type, props, ref } = vdom
+    const context = type._context
+    context._currentValue = props.value
+    const renderVdom = props.children
+    vdom.oldRenderVdom = renderVdom
+    return createDOM(renderVdom)
+}
+
+// 渲染 consumer 组件，调用儿子函数，然后传值
+function mountContextComponent(vdom) {
+    const { type, props, ref } = vdom
+    const context = type._context
+    const renderVdom = props.children(context._currentValue)
+    vdom.oldRenderVdom = renderVdom
+    return createDOM(renderVdom)
+}
+
+// 处理初次渲染 static contextType -> this.context 的转换
+function mountClassComponent(vdom) {
+    const { type, props, ref } = vdom
+    const classInstance = new type(props)
+    if (type.contextType) {
+        classInstance.context = type.contextType._currentValue
+    }
+    // ...
+}
+```
+
+src/Component
+
+```js
+import { REACT_CONTEXT, REACT_PROVIDER } from './element'
+
+class Component {
+    forceUpdate() {
+        const oldRenderVdom = this.oldRenderVdom
+        const oldDOM = findDOM(oldRenderVdom)
+        if (this.constructor.contextType) {
+            this.context = this.constructor.contextType._currentValue
+        }
+    }
+}
+
+// 更新的时候处理 contextType
+function updateElement(oldVdom, newVdom) {
+    if (oldVdom.type.$$typeof === REACT_CONTEXT) {
+        updateContextComponent(oldVdom, newVdom)
+    } else if (oldVdom.type.$$typeof === REACT_PROVIDER) {
+        updateProviderComponent(oldVdom, newVdom)
+    }
+    // else if ...
+}
+
+function updateContextComponent(oldVdom, newVdom) {
+    const currentDOM = findDOM(oldVdom)
+    const parentDOM = currentDOM.parentNode
+    const { type, props } = newVdom
+    const context = type._context
+    const renderVdom = props.children(context._currentValue)
+    compareTwoVdom(parentDOM, oldVdom.oldRenderVdom, renderVdom)
+    newVdom.oldRenderVdom = renderVdom
+}
+
+function updateProviderComponent(oldVdom, newVdom) {
+    const currentDOM = findDOM(oldVdom)
+    const parentDOM = currentDOM.parentNode
+    const { type, props } = newVdom
+    const context = type._context
+    context._currentValue = props.value
+    const renderVdom = props.children
+    compareTwoVdom(parentDOM, oldVdom.oldRenderVdom, renderVdom)
+    newVdom.oldRenderVdom = renderVdom
+}
+```
+
+## 高阶组件
+
+装饰器高阶组件
+
+将 package.json 中的 scripts 命令（react-scripts）都换成 `react-app-rewired`
+
+```shell
+npm i react-app-rewired customise-cra @babel/plugin-proposal-decorators -D
+```
+
+config.overrides.js
+
+```js
+const { override, disableEslint, addDecoratorsLegatory } = require('customise-cra')
+
+module.exports = override(
+    disableEslint(),
+    addDecoratorsLegatory()
+)
+```
+
+jsconfig.json
+
+```json
+{
+    "compilerOptions": {
+        "experimentalDecorators": true
+    }
+}
+```
+
+### 反向继承
+
+可用于修改第三方库的逻辑
+
+```js
+const contentWrapper = OldComponent => {
+    return class NewButton extends OldComponent {
+        componentDidMount() {
+            super.componentDidMount()
+        }
+        componetWillMount() {
+            super.componentWillMount()
+        }
+        render() {
+            const element = super.render()
+
+            const newProps = {
+                ...element.props
+            }
+            const newChildren = this.props.children
+            return React.cloneElement(element, newProps, newChildren)
+        }
+    }
+}
+```
+
+src/react
+
+
+```js
+// 拷贝+覆盖孩子(如果有)
+function cloneElement(element, newProps, ...newChildren) {
+    const children = element.props && element.props.children
+    if (newChildren.length > 0) {
+        children = newChildren.map(wrapToVdom)
+    }
+
+    if (children.length === 1) children = children[0]
+    const props = {
+        ...element.props,
+        ...newProps,
+        children
+    }
+    return {
+        ...element,
+        props
+    }
+}
+
+const React = {
+    cloneElement
+}
+
+export default React
+```
+
+## render props
+
+在 props 中传递渲染函数
+
+## 性能优化
+
++ 属性相同时，不进行渲染 `React.PureComponent`
+
+src/element
+
+```js
+const REACT_MEMO = Symbol('react.memo')
+```
+
+src/react
+
+```js
+import { REACT_MEMO } from './element'
+
+// 浅比较
+function shallowEqual(obj1, obj2) {
+    if (obj1 === obj2) return true
+    if (typeof obj1 !== 'object' || obj1 === null || typeof obj2 !== 'object' || obj2 === null) return false
+    const keys1 = Object.keys(obj1)
+    const keys2 = Object.keys(obj2)
+    if (keys1.length !== keys2.length) return false
+    for (let key of obj1) {
+        if (!obj2.hasOwnProperty(key) || obj1[key] !== obj2[key]) {
+            return false
+        }
+    }
+    return true
+}
+class PureComponent extends Component {
+    shouldComponentUpdate(nextProps, nextState) {
+        return !shallowEqual(nextProps, this.props) || !shallowEqual(nextState, this.state)
+    }
+}
+
+// type 包装的函数组件，compare 比较方法
+function memo(type, compare = shallowEqual) {
+    return {
+        $$typeof: REACT_MEMO,
+        type,
+        compare
+    }
+}
+
+const React = {
+    PureComponent,
+    memo
+}
+
+export default React
+```
+
+src/react-dom
+
+```js
+import { REACT_MEMO } from './element'
+
+function createDOM(vdom) {
+    const { type, props, ref } = vdom
+    const dom
+    if (type && type.$$typeof === REACT_MEMO) {
+        return mountMemoComponent(vdom)
+    }
+    // else if
+}
+
+// 拿到真实dom，然后渲染
+function mountMemoComponent(vodm) {
+    const { type, props } = vdom
+    const renderVdom = type.type(props)
+    vdom.oldRenderVdom = renderVdom
+    return createDOM(renderVdom)
+}
+
+function updateElement(oldVdom, newVdom) {
+    if (oldVdom.type.$$typeof === REACT_MEMO) {
+        updateMemoComponent(oldVdom, newVdom)
+    }
+}
+
+function updateMemoComponent(oldVdom, newVdom) {
+    const { type } = oldVdom
+    if (!type.compare(oldVdom.props, newVdom.props)) {
+        // 如果不一样则更新渲染
+        const oldDOM = findDOM(oldVdom)
+        const parentDOM = oldDOM.parentNode
+        const { type, props } = newVdom
+        const renderVdom = type.type(props)
+        compareTwoVdom(parentDOM, oldVdom.oldRenderVdom, renderVdom)
+        newVdom.oldRenderVdom = renderVdom
+    } else {
+        // 否则用旧的值
+        newVdom.oldRenderVdom = oldVdom.oldRenderVdom
+    }
+}
+```
+
+## createPortal
+
+src/react-dom
+
+```js
+const ReactDOM = {
+    render,
+    createPortal: render
+}
+
+export default ReactDOM
+```
+
+注意，这样写，上面的 mountXXXComponent 里得判断 renderVdom 为空时，返回 null
+
+## hooks
+
+
+
+### useState
+
++ 每次渲染保留 state
++ 返回一对值，当前状态和设置状态的函数，但不会像 this.setState 一样能合并状态
+
+src/react-dom
+
+```js
+const hookStates = [] // 存放状态的数组，原版是链表
+let hookIndex = 0 // 存放索引的值
+let scheduleUpdate
+
+export function useState(initialState) {
+    hookStates[hookIndex] = hookStates[hookIndex] || initialState
+    const currentIndex = hookIndex
+
+    function setState(newState) {
+        hookStates[currentIndex] = newState
+        scheduleUpdate()
+    }
+    return [hookStates[hookIndex++], setState]
+}
+
+
+function render(vdom, container) {
+    mount(vdom, container)
+    scheduleUpdate = () => { 
+        // React 每次更新都是从根节点开始更新，因为它不知道新的状态会影响哪些组件
+        // 在真正的源码里，类组件也是从根节点开始渲染（dom-diff）的
+        // 批量调度跟 vue 的 nextTick 更新机制一样
+        // 新版调度有优先级，新版每个组件都有一个 fiber hookState 和 hookIndex
+        hookIndex = 0
+        compareTwoVdom(container, vdom, vdom)
+    }
+}
+```
+
+src/react
+
+```js
+import * as hooks from './react-dom'
+
+const React = {
+    ...hooks
+}
+export default React
+```
+
+### useCallback useMemo
+
+useCallback 依赖性发生改变的时候才更新函数
 
 ## fiber
