finish: level1 React 全家桶

--- a/source/_posts/2022_07_React-全家桶.md
+++ b/source/_posts/2022_07_React-全家桶.md
@@ -1428,4 +1428,178 @@ export default React
 
 useCallback 依赖性发生改变的时候才更新函数
 
+src/react-dom
+
+```js
+export function useCallback() {
+    if (hookState[hookIndex]) { // 不是第一次的情况
+        const [lastCallback, lastDeps] = hookState[hookIndex]
+        const same = deps.every((item, index) => item === lastDeps[index])
+        if (same) {
+            hookIndex ++
+            return lastCallback
+        } else {
+            hookState[hookIndex ++] = [callback, deps]
+            return callback
+        }
+    } else { // 第一次渲染，到这里
+        hookState[hookIndex ++] = [callback, deps]
+        return callback
+    }
+}
+
+export function useMemo(factory, deps) {
+    if (hookState[hookIndex]) { // 不是第一次的情况
+        const [lastMemo, lastDeps] = hookState[hookIndex]
+        const same = deps.every((item, index) => item === lastDeps[index])
+        if (same) {
+            hookIndex ++
+            return lastMemo
+        } else {
+            const newMemo = factory()
+            hookState[hookIndex ++] = [newMemo, deps]
+            return newMemo
+        }
+    } else { // 第一次渲染，到这里
+        const newMemo = factory()
+        hookState[hookIndex ++] = [newMemo, deps]
+        return newMemo
+    }
+}
+```
+
+### useReducer
+
+useState 的替代方案，并返回当前的 state 极其配套的 dispatch 方法
+
+src/react-dom
+
+```js
+export function useReducer(reducer, initialState) {
+    hookStates[hookIndex] = hookStates[hookIndex] || (typeof initialState === 'function' ? initialState() : initialState)
+    const currentIndex = hookIndex
+
+    function dispatch(action) {
+        const oldState = hookStates[currentIndex]
+        if (typeof reducer === 'function') {
+            const newState = reducer(oldState, action)
+            hookStates[currentIndex] = newState
+        } else {
+            const newState = typeof action === 'function' ? action(oldState) : action
+            hookStates[currentIndex] = action
+        }
+        scheduleUpdate()
+    }
+    return [hookStates[hookIndex++], dispatch]
+}
+
+// function useState(initialState) { return useReducer(null, initialState) }
+```
+
+### useContext
+
+src/react-dom
+
+```js
+export function useContext(context) {
+    return context._currentValue
+}
+```
+
+### useEffect
+
+是纯函数世界到命令式世界的逃生通道
+
+src/react-dom
+
+```js
+export function useEffect(callback, deps) {
+    const currentIndex = hookIndex
+    if (hookStates[hookIndex]) {
+        const [destory, lastDeps] = hookStates[hookIndex]
+        const same = deps && deps.every((item, index) => item === lastDeps[index])
+        if (same) {
+            hookIndex ++
+        } else {
+            setTimeout(() => {
+                if (destory) destory()
+                hookStates[currentIndex] = [callback(), deps]
+            })
+            hookIndex ++
+        }
+    } else { // 第一次
+        setTimeout(() => {
+            hookStates[currentIndex] = [callback(), deps]
+        })
+        hookIndex ++
+    }
+}
+```
+
+### useLayoutEffect
+
+区别是它是微任务
+
+src/react-dom
+
+```js
+export function useLayoutEffect(callback, deps) {
+    const currentIndex = hookIndex
+    if (hookStates[hookIndex]) {
+        const [destory, lastDeps] = hookStates[hookIndex]
+        const same = deps && deps.every((item, index) => item === lastDeps[index])
+        if (same) {
+            hookIndex ++
+        } else {
+            queueMicrotask(() => {
+                if (destory) destory()
+                hookStates[currentIndex] = [callback(), deps]
+            })
+            hookIndex ++
+        }
+    } else { // 第一次
+        queueMicrotask(() => {
+            hookStates[currentIndex] = [callback(), deps]
+        })
+        hookIndex ++
+    }
+}
+```
+
+### useRef
+
+src/react-dom
+
+```js
+export function useRef(initialValue) {
+    hookStates[hookIndex] = hookStates[hookIndex] || { current: initialValue }
+    return hookStates[hookIndex ++]
+}
+```
+
+### useImperativeHandle forwardRef
+
+src/react
+
+```js
+export function forwardRef() {
+    // 见上面逻辑
+}
+
+const React = {
+    forwardRef
+}
+
+export default React
+```
+
+src/react-dom
+
+```js
+export function useImperativeHandle(ref, factory) {
+    ref.current = factory()
+}
+```
+
+
 ## fiber
