update: React 全家桶

--- a/source/_posts/2022_07_React-全家桶.md
+++ b/source/_posts/2022_07_React-全家桶.md
@@ -1603,3 +1603,151 @@ export function useImperativeHandle(ref, factory) {
 
 
 ## fiber
+
+在 react15以前，都是递归渲染dom树，js是单线程，ui渲染和js执行是互斥的，所以会比较卡
+
+> 帧
+>
+> 大多数设备的屏幕刷新率为60帧
+> 留给每个帧计算的时间（样式计算，布局、绘制）就是16.66ms
+> 浏览器帧的流程如下：
+
+输入事件 -> 定时器 -> 开始帧（resize，scroll，media query change）-> requestAnimationFrame -> 布局layout（计算样式、更新布局）-> 绘制paint
+
+剩余时间为空闲时间（16.66ms中的剩余部分），执行idle callback
+
+什么是 fiber
+
+fiber 是一个执行单元，也是一种数据结构
+
+可以适时的让出浏览器的控制权
+
+requestIdleCallback 中注册的任务，会在空闲时间执行，是低优先级任务
+
+requestAnimationFrame 会在帧开始时执行，是高优先级任务
+
+```js
+function sleep(duration) {
+    const start = Date.now()
+    while (start + duration > Date.now()) {}
+}
+const works = [
+    () => {
+        console.log('1开始')
+        // sleep(20)
+        console.log('1结束')
+    },
+    () => {
+        console.log('2开始')
+        // sleep(20)
+        console.log('2结束')
+    },
+    () => {
+        console.log('3开始')
+        // sleep(20)
+        console.log('3结束')
+    },
+    () => {
+        console.log('4开始')
+        // sleep(20)
+        console.log('4结束')
+    },
+    () => {
+        console.log('5开始')
+        // sleep(20)
+        console.log('5结束')
+    }
+]
+// 参数 timeout，我workLoop要一直没机会执行。超时后，浏览器也必须给我执行了
+requestIdleCallback(workLoop, { timeout: 1000 })
+
+function wookLoop(deadline) {
+    console.log(`本帧的剩余时间：${parseInt(deadline.timeRemaining())}`) // 大约10ms
+    // 还有剩余时间，并且还有未完成的任务
+    while ((deadline.timeRemaining() > 0 || deadline.didTimeout) && works.length > 0) {
+        performUnitOfWork()
+    }
+    // while 走完了，走这里 ，如果还有，就继续注册 requestIdleCallback，到下面的帧进行执行
+    if (works.length > 0) {
+        console.log(`只剩下：${parseInt(deadline.timeRemaining())}`)
+        requestIdleCallback(workLoop)
+    }
+}
+
+function performUnitOfWork() {
+    works.shift()()
+}
+```
+
+requestIdleCallback 执行有两种可能性
+
+1. 正常情况，16.66ms内多余的时间，会给它执行
+
+2. 很长时间没有交互了（重要工作要做），这个时间会延长
+会延长到 50ms（每秒20帧），因为用户 100ms 内的响应都会感觉很流畅
+100 / 2 就得 50，浏览器占50ms，requestIdleCallback 占 50ms
+
+这个 requestIdleCallback 只有 chrome 支持，所以 react 利用 MessageChannel 模拟前者，将回调延迟到绘制之后执行
+
+MessageChannel 是一个宏任务
+
+```js
+const channel = new MessageChannel()
+
+const port1 = channel.port1
+const port2 = channel.port2
+
+port1.onmessage = function (event) {
+    console.log('port1收到来自port2的数据', event.data)
+}
+
+port2.onmessage = function (event)  {
+    console.log('port2收到来自port1的数据', event.data)
+}
+
+port1.sendMessage('给2')
+port2.sendMessage('给1')
+```
+
+实现 requestIdleCallback 的 polyfill
+
+```js
+let frameDeadLine // 一帧的截止时间
+let pendingCallback // 等待执行的回调
+const channel  = new MessageChannel()
+const activeAnimationTime = 1000 / 60 // 16.66ms 每帧的时间
+const timeRemaning = () => frameDeadLine - performance.now()
+
+channel.port2.onmessage = function (event) {
+    const currentTime = performance.now() // 页面加载时间到现在的时间差
+    // 帧的截止时间小于当前时间，就过期了
+    const didTimeout = frameDeadLine <= currentTime
+
+    if (didTimeout || timeRemaning() > 0) {
+        if (pendingCallback) pendingCallback({
+            didTimeout,
+            timeRemaning
+        })
+    }
+}
+
+window.requestIdleCallback = function (callback, options) {
+    // 每帧开始的时间
+    requestAnimationFrame((rafTime) => {
+      // rafTime 页面加载时间到现在的时间差，同 performance.now()
+      frameDeadLine = rafTime + activeAnimationTime
+      pendingCallback = callback
+      // 发消息之后，相当于添加了一个宏任务
+      // 执行到 channel.port2.onmessage 相当于浏览器空闲了
+      channel.port1.postMessage('Hello')
+    })
+}
+```
+
+fiber 执行阶段
+
+react 每次渲染有两个阶段（reconciliation）协调 render 阶段和 commit 阶段
+
+协调阶段：理解为 diff 阶段，可被中断，会找出所有节点变更，节点新增，删除，属性变更等，被称之为副作用
+提交阶段：将上一次计算出的副作用一次性执行，不能被打断
+
