--- a/source/_posts/2022_07_React-全家桶.md
+++ b/source/_posts/2022_07_React-全家桶.md
@@ -1748,6 +1748,88 @@ fiber 执行阶段
 
 react 每次渲染有两个阶段（reconciliation）协调 render 阶段和 commit 阶段
 
-协调阶段：理解为 diff 阶段，可被中断，会找出所有节点变更，节点新增，删除，属性变更等，被称之为副作用
-提交阶段：将上一次计算出的副作用一次性执行，不能被打断
+1. 协调阶段：理解为 diff 阶段，可被中断，会找出所有节点变更，节点新增，删除，属性变更等，被称之为副作用
+2. 提交阶段：将上一次计算出的副作用一次性执行，不能被打断
 
+fiber 的遍历是深度优先遍历
+
+1. 从根节点开始，每个节点的遍历规则
+2. 先找第一个儿子，没有第一个儿子则此节点遍历完成
+3. 这个儿子有弟弟则遍历弟弟
+4. 他没有弟弟，则返回父节点标识，完成父节点遍历，如果有叔叔，则遍历叔叔
+5. 没有父节点，则遍历结束
+
+![](fiber-foreach.bmp)
+
+```js
+const container = document.getElementById('root')
+const element = {
+    type: 'div',
+    props: {
+        id: 'A1',
+        children: [
+            {
+                type: 'div',
+                props: {
+                    id: 'B1',
+                    children: [
+                        {
+                            type: 'div',
+                            props: {
+                                id: 'C1'
+                            }
+                        },
+                        {
+                            type: 'div',
+                            props: {
+                                id: 'C2'
+                            }
+                        }
+                    ]
+                },
+            },
+            {
+                type: 'div',
+                props: {
+                    id: 'B2'
+                }
+            },
+        ]
+    },
+
+}
+// 下一个工作单元,fiber 也是一个普通的对象
+let nextUnitOfWork = {
+    stateNode: container, // 对应的DOM节点
+    props: { // fiber 的属性
+        children: [element]
+    }
+    // child 指向第一个儿子
+    // return 指向父亲
+    // sibling 指向弟弟
+}
+
+function workLoop() {
+    // 如果当前有工作单元就执行，并返回下一个工作单元
+    while (nextUnitOfWork) {
+        nextUnitOfWork = performUnitOfWork(nextUnitOfWork)
+    }
+}
+/**
+ * 1. 创建此 fiber 的真实 DOM，通过虚拟 DOM 创建对应的 fiber 树结构
+ */
+function performUnitOfWork(workingInProgressFiber) {
+    beginWork(workingInProgressFiber)
+
+    if (workingInProgressFiber.children) {
+        return workingInProgressFiber.children
+    }
+}
+
+// 创建真实DOM，创建fiber
+function beginWork() {
+
+}
+
+requestIdleCallback(workLoop)
+```
